--- a/src/styles/desktop.scss
+++ b/src/styles/desktop.scss
@@ -1,5 +1,6 @@
 // Desktop inheritance
 @import "./variables.scss";
+@import "./mixins.scss";
 
 @font-face {
   font-family: "Futura-Light";
@@ -71,7 +72,10 @@
   line-height: 157px;
   letter-spacing: 2.5px;
   font-family: "Futura-Light";
-  transform: scale(1.1);
+  transform: scale(1);
+  @include respond(lg) {
+    transform: scale(1.1);
+  }
 }
 
 @mixin p-desktop-two {
